--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,10 @@
 /* TODO Add site wide styles */
+* {
+   font-family: dunbar-tall, sans-serif;
+   font-weight: 400;
+   font-style: normal;
+}
+
+body {
+   margin: 0px;
+}
