--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -72,7 +72,25 @@
    display: flex;
    justify-content: flex-end;
    width: 100%;
-   margin-top: 22px;
+   align-items: center;
+   margin-top: 23px;
+}
+
+#login__buttons a {
+   text-decoration: none;
+   color: #666666;
+}
+
+#signup__link {
+   margin: 0px;
+   font-size: 12px;
+   margin-right: 40px;
+   border-bottom: 2px solid #99999977;
+   transition: border-bottom .2s;
+}
+
+#signup__link:hover {
+   border-bottom: 2px solid rgb(174, 243, 255);
 }
 
 #login__buttons button {
