--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -1,3 +1,12 @@
+#error__container {
+   margin-top: 15px;
+}
+
+.error {
+   margin-top: 5px;
+   margin-left: 45px;
+}
+
 #splash__page {
    display: flex;
    justify-content: center;
@@ -21,7 +30,7 @@
    position:fixed;
    top: 265px;
    width: 492px;
-   height: 245px;
+   height: auto;
    background-color: white;
    border: 3px solid #999999;
    border-radius: 25px;
@@ -65,6 +74,7 @@
 
 
 #login__buttons {
+   padding-bottom: 28px;
    display: flex;
    justify-content: flex-end;
    width: 100%;
