--- a/react-app/src/components/Journals/Journals.css
+++ b/react-app/src/components/Journals/Journals.css
@@ -3,7 +3,7 @@
    justify-content: center;
    width: 394px;
    height: 70%;
-   border: 2px solid #707070;
+   border: 1px solid #707070;
    border-radius: 31px;
    margin-top: 70px;
 }
@@ -12,12 +12,12 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   font-size: 25px;
+   font-size: 23px;
    color: #4E4E4E;
-   width: 500px;
-   margin: 5px;
+   width: 100%;
+   /* margin: 5px; */
    height: 80px;
-   border: 2px solid #707070;
-   border-radius: 31px;
+   border-bottom: 1px solid #707070;
+   /* border-radius: 31px; */
 }
 
