--- a/react-app/src/components/Navbar/NavBar.css
+++ b/react-app/src/components/Navbar/NavBar.css
@@ -11,7 +11,7 @@ nav a {
    color: #4E4E4E;
    font-size: 59px;
    margin: 0px;
-   margin-bottom: 9px
+   margin-bottom: 9px;
 }
 
 #navbar__border {
