--- a/react-app/src/components/CreateJournal/CreateJournal.css
+++ b/react-app/src/components/CreateJournal/CreateJournal.css
@@ -7,7 +7,6 @@
    margin-left: 80px;
 }
 
-
 #journal__border {
    display: flex;
    align-items: center;
@@ -56,8 +55,7 @@
 
 #benefits__title {
    grid-area: title;
-   margin: 40px 0px;
-   margin-left: 40px;
+   margin: 30px 0px 40px 40px;
    font-size: 41px;
    color: #707070;
 }
@@ -68,14 +66,19 @@
    margin: 0 40px;
 }
 
-.images {
-   margin-bottom: 45px;
-   justify-self: center;
+.image__container {
+   display: flex;
+   justify-content: center;
    width: 488px;
-   height: 230px;
+   height: 230px; 
+   border-radius: 17px;
+   margin: 0px 40px 30px 40px;
+}
+
+.images {
+   justify-self: center;
    background-size: contain;
    background-repeat: no-repeat;
-   border-radius: 17px;
 }
 
 /* Page's styles of the subtitles and descriptions */
@@ -109,34 +112,62 @@
    grid-area: mood;
 }
 
+#emotion__container {
+   grid-area: emotion;
+}
+
 
 /* These are the divs that contain the images */
 
-#immune__img {
-   grid-area: immune__img;
-   background-image: url("../../images/flu_image.jpg");
-}
 
 #stress__img {
    grid-area: stress__img;
    background-image: url("../../images/stress.jpg");
+   width: 488px;
+   height: 230px;
+   border-radius: 17px;
+}
+
+#memory__img__container {
+   margin-left:32px;
 }
 
 #memory__img {
    grid-area: memory__img;
    background-image: url("../../images/memory.jpg");
+   height:210px;
+   width: 470px;
+   border-radius: 17px;
+}
+
+#immune__img__container {
+   background-color: #7EC3D2;
+}
+
+#immune__img {
+   grid-area: immune__img;
+   background-image: url("../../images/flu_image.jpg");
+   width: 435px;
+}
+
+#mood__img__container {
+   background-color: #FFEFEF;
 }
 
 #mood__img {
    grid-area: mood__img;
    background-image: url("../../images/happy_group.jpg");
+   width: 345px;
+   height: 230px;
 }
 
-#emotion__container {
-   grid-area: emotion;
+#emotion__img__container {
+   background-color: #FED66D;
 }
 
 #emotion__img {
    grid-area: emotion__img;
    background-image: url("../../images/happy_girl.png");
+   width: 345px;
+   height: 230px;
 }
