--- a/react-app/src/components/CreateJournal/CreateJournal.css
+++ b/react-app/src/components/CreateJournal/CreateJournal.css
@@ -26,6 +26,15 @@
    border: 1px solid #8a8a8a;
    border-radius: 27px;
    color: #4E4E4E;
+   background-color: white;
+   cursor: pointer;
+   transition: border-color .3s, background-color .3s;
+}
+
+#create__button:hover {
+   /* background-color: rgb(230, 255, 250); */
+   /* border-color: rgb(164, 196, 189); */
+   background-color: #e9e9e967;
 }
 
 #journal__benefits {
