--- a/react-app/src/components/Journals/Journals.css
+++ b/react-app/src/components/Journals/Journals.css
@@ -2,7 +2,7 @@
    /* display: flex;
    justify-content: center; */
    width: 394px;
-   height: 70%;
+   height: 720px;
    border: 1px solid #707070;
    border-radius: 31px;
    margin-top: 70px;
@@ -21,7 +21,7 @@
 
 #journals__container {
    height: 75%;
-   margin-top:11px;
+   margin-top:30px;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
@@ -42,6 +42,10 @@
    align-items: center;
    height: 48px;
    border: 1px solid #707070;
-   margin: 20px 8%;
+   /* margin: 30px 8%; */
+   /* margin: px 8% 0 8%; */
+   margin: 0px 8%;
+   margin-bottom: 20px;
+   /* margin-bottom: 0px; */
    border-radius: 10px;
 }
