--- a/react-app/src/components/ViewJournal/ViewJournal.css
+++ b/react-app/src/components/ViewJournal/ViewJournal.css
@@ -1,6 +1,6 @@
 #journal {
    width: 1158px;
-   height: 70%;
+   height: 720px;
    border: 1px solid #707070;
    border-radius: 31px;
    margin-top: 70px;
@@ -20,11 +20,19 @@
 
 #entries__container {
    height: 85%;
-   margin: 25px;
+   margin: 30px;
 }
 
 #journal__entries__container {
-   height: 85%;
+   height: 75%;
+   margin: 10px 0px;
+   overflow-y: scroll;
+   -ms-overflow-style: none;
+   scrollbar-width: none;
+}
+
+#journal__entries__container::-webkit-scrollbar {
+   display: none;
 }
 
 #journal__entries {
@@ -49,6 +57,9 @@
 #journal__buttons {
    display: flex;
    justify-content: flex-end;
+   align-items: center;
+   width: 100%;
+   height: 25%;
 }
 
 .journal__button {
