--- a/react-app/src/components/ViewJournal/ViewJournal.css
+++ b/react-app/src/components/ViewJournal/ViewJournal.css
@@ -1,6 +1,6 @@
 #journal {
    width: 1158px;
-   height: 720px;
+   height: 690px;
    border: 1px solid #707070;
    border-radius: 31px;
    margin-top: 70px;
@@ -24,8 +24,9 @@
 }
 
 #journal__entries__container {
-   height: 75%;
+   height: 82%;
    margin: 10px 0px;
+   margin-bottom: 0px;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
@@ -36,7 +37,6 @@
 }
 
 #journal__entries {
-   /* height: 70%; */
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto;
@@ -59,7 +59,7 @@
    justify-content: flex-end;
    align-items: center;
    width: 100%;
-   height: 25%;
+   height: 100px;
 }
 
 .journal__button {
