--- a/react-app/src/components/CreateJournal/CreateJournal.css
+++ b/react-app/src/components/CreateJournal/CreateJournal.css
@@ -1,6 +1,6 @@
 #create__journal {
    width: 1158px;
-   height: 70%;
+   height: 690px;
    border: 1px solid #707070;
    border-radius: 31px;
    margin-top: 70px;
