--- a/react-app/src/components/Journals/Journals.css
+++ b/react-app/src/components/Journals/Journals.css
@@ -5,14 +5,14 @@
    height: 690px;
    border: 1px solid #707070;
    border-radius: 31px;
-   margin-top: 70px;
+   margin-top: 65px;
 }
 
 #journals__title {
    display: flex;
    justify-content: center;
    align-items: center;
-   font-size: 23px;
+   font-size: 28px;
    color: #4E4E4E;
    width: 100%;
    height: 80px;
@@ -20,8 +20,8 @@
 }
 
 #journals__container {
-   height: 75%;
-   margin-top: 30px;
+   height: 480px;
+   margin-top: 31px;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
