--- a/react-app/src/components/ViewJournal/ViewJournal.css
+++ b/react-app/src/components/ViewJournal/ViewJournal.css
@@ -3,7 +3,7 @@
    height: 690px;
    border: 1px solid #707070;
    border-radius: 31px;
-   margin-top: 70px;
+   margin-top: 65px;
    margin-left: 80px;
 }
 
@@ -14,7 +14,7 @@
    height: 81px;
    width: 100%;
    border-bottom: 1px solid #707070;
-   font-size: 30px;
+   font-size: 28px;
    color: #4E4E4E;
 }
 
@@ -24,7 +24,7 @@
 }
 
 #journal__entries__container {
-   height: 82%;
+   height: 480px;
    margin: 10px 0px;
    margin-bottom: 0px;
    overflow-y: scroll;
