--- a/react-app/src/components/ViewJournal/ViewJournal.css
+++ b/react-app/src/components/ViewJournal/ViewJournal.css
@@ -7,15 +7,33 @@
    margin-left: 80px;
 }
 
-#journal__title {
-   display: flex;
-   align-items: center;
-   justify-content: center;
+#journal__title__container {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
    height: 81px;
    width: 100%;
    border-bottom: 1px solid #707070;
    font-size: 28px;
    color: #4E4E4E;
+}
+
+#create__entry {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   justify-self: flex-start;
+   align-self: center;
+   width: 50px;
+   height: 50px;
+   margin-top: 4px;
+   margin-left: 18px;
+   border: 1px solid #707070;
+   border-radius: 25px;
+}
+
+#journal__title {
+   justify-self: center;
+   align-self: center;
 }
 
 #entries__container {
