added react quill and create entry api route

--- a/react-app/src/components/ViewJournal/ViewJournal.css
+++ b/react-app/src/components/ViewJournal/ViewJournal.css
@@ -16,6 +16,9 @@
    font-size: 28px;
    color: #4E4E4E;
 }
+#journal__title__container a{
+   align-self: center;
+}
 
 #create__entry {
    display: flex;
