users can view the entry title properly

--- a/react-app/src/components/ViewJournal/ViewJournal.css
+++ b/react-app/src/components/ViewJournal/ViewJournal.css
@@ -65,6 +65,11 @@
    row-gap: 20px;
 }
 
+.entry__link {
+   text-decoration: none;
+   color: black;
+}
+
 .entry {
    display: flex;
    justify-content: center;
