fixed grid and styling for most components

--- a/react-app/src/components/ViewJournal/ViewJournal.css
+++ b/react-app/src/components/ViewJournal/ViewJournal.css
@@ -1,11 +1,11 @@
-#journal {
+/* #journal {
    width: 1158px;
    height: 690px;
    border: 1px solid #707070;
    border-radius: 31px;
    margin-top: 65px;
    margin-left: 80px;
-}
+} */
 
 #journal__title__container {
    display: grid;
@@ -167,4 +167,30 @@
 
 #cancel__delete {
    margin-right: 5px;
+}
+
+@media screen and (max-width: 1800px) {
+
+   #journal__entries {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: auto;
+      justify-items: center;
+      row-gap: 20px;
+   }
+   
+   .entry {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 180px;
+      height: 48px;
+      border: 1px solid #707070;
+      border-radius: 10px;
+   }
+
+   #journal__title {
+      text-align: center;
+   }
+
 }
