--- a/react-app/src/components/Journals/Journals.css
+++ b/react-app/src/components/Journals/Journals.css
@@ -1,11 +1,12 @@
 #journals {
-   /* display: flex;
-   justify-content: center; */
+   position: absolute;
    width: 394px;
    height: 690px;
    border: 1px solid #707070;
    border-radius: 31px;
    margin-top: 65px;
+   top:80px;
+   left: 8%;
 }
 
 #journals__title {
@@ -45,4 +46,18 @@
    margin: 0px 8%;
    margin-bottom: 20px;
    border-radius: 10px;
+}
+
+@media screen and (max-width: 1800px) {
+   #journals {
+      position: absolute;
+      width: 200px;
+      height: 690px;
+      border: 1px solid #707070;
+      border-radius: 31px;
+      margin-top: 65px;
+      top:80px;
+      left: 8%;
+   }
+   
 }
