--- a/react-app/src/components/CreateJournal/CreateJournal.css
+++ b/react-app/src/components/CreateJournal/CreateJournal.css
@@ -1,11 +1,3 @@
-#create__journal {
-   width: 1158px;
-   height: 690px;
-   border: 1px solid #707070;
-   border-radius: 31px;
-   margin-top: 65px;
-   margin-left: 80px;
-}
 
 #journal__border {
    display: flex;
@@ -54,7 +46,6 @@
    -ms-overflow-style: none;
    scrollbar-width: none;
    /* border: 1px solid black; */
-   
 }
 
 #journal__benefits::-webkit-scrollbar {
@@ -233,4 +224,88 @@
 
 #cancel__journal__button {
    margin-right: 6px;
+}
+
+@media screen and (max-width: 1800px) {
+   #journal__benefits {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-areas: 
+      "title"
+      "stress"
+      "memory"
+      "immune"
+      "mood"
+      "emotion"
+      ;
+      height: 80%;
+      overflow-y: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      align-items: center;
+   }
+
+   /* text containers */ 
+
+   .containers {
+      margin: 0px;
+   }
+
+   #stress__container {
+      grid-area: stress;
+      margin: 0px;
+   }
+   
+   #memory__container {
+      grid-area: memory;
+   margin: 0px;
+   }
+   
+   #immune__container {
+      grid-area: immune;
+      margin: 0px;
+   }
+   
+   #mood__container {
+      grid-area: mood;
+   margin: 0px;
+   }
+   
+   #emotion__container {
+      grid-area: emotion;
+      margin: 0px;
+   }
+   
+   /* img containers */
+
+   #stress__img__container {
+      display: none;
+      margin-left:20px
+   }
+   
+   #memory__img__container {
+      display: none;
+      margin-left:32px;
+      margin-right:20px;
+   }
+   
+   #immune__img__container {
+      display: none;
+      background-color: #7EC3D2;
+      margin-left:20px;
+   }
+   
+   #mood__img__container {
+      display: none;
+      background-color: #FFEFEF;
+      margin-right:20px;
+   }
+   
+   #emotion__img__container {
+      display: none;
+      background-color: #FED66D;
+      margin-left:20px;
+   }
+
+   
 }
