fixed styling for navbar

--- a/react-app/src/components/journal.css
+++ b/react-app/src/components/journal.css
@@ -18,7 +18,7 @@
       border-radius: 31px;
       margin-top: 65px;
       margin-left: 80px;
-      position:fixed;
+      position:absolute;
       top:80px;
       right: 8%;
    }
@@ -32,7 +32,7 @@
       border-radius: 31px;
       margin-top: 65px;
       margin-left: 80px;
-      position:fixed;
+      position:absolute;
       top:80px;
       right: 8%;
    }
