--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -9,3 +9,33 @@ body {
    margin: 0px;
 }
 
+/* width */
+::-webkit-scrollbar {
+   width: 6px;
+ }
+ 
+ /* Track */
+ ::-webkit-scrollbar-track {
+   background: #ffffff;
+ }
+ 
+ /* Handle */
+ ::-webkit-scrollbar-thumb {
+   background: #888;
+   border-radius: 5px;
+ }
+ 
+ /* Handle on hover */
+ ::-webkit-scrollbar-thumb:hover {
+   background: rgb(117, 117, 117);
+ }
+
+ /* 
+::-webkit-scrollbar  the scrollbar.
+::-webkit-scrollbar-button    the buttons on the scrollbar (arrows pointing upwards and downwards).
+::-webkit-scrollbar-thumb  the draggable scrolling handle.
+::-webkit-scrollbar-track  the track (progress bar) of the scrollbar.
+::-webkit-scrollbar-track-piece  the track (progress bar) NOT covered by the handle.
+::-webkit-scrollbar-corner    the bottom corner of the scrollbar, where both horizontal and vertical scrollbars meet.
+::-webkit-resizer    the draggable resizing handle that appears at the bottom corner of some elements.
+ */
