--- a/react-app/src/components/EditEntry/EditEntry.css
+++ b/react-app/src/components/EditEntry/EditEntry.css
@@ -50,7 +50,10 @@
    justify-content: flex-end;
    align-items: center;
    height: 100px;
-   /* margin-right: 30px; */
+}
+
+#edit__buttons button {
+   margin-bottom: 5px;
 }
 
 .edit__button {
