--- a/react-app/src/components/journal.css
+++ b/react-app/src/components/journal.css
@@ -31,6 +31,20 @@
 
 @media screen and (max-width: 1800px) {
    #journal {
+      width:  750px;
+      height: 690px;
+      border: 1px solid #707070;
+      border-radius: 31px;
+      margin-top: 65px;
+      margin-left: 80px;
+      position:absolute;
+      top:80px;
+      right: 8%;
+   }
+}
+
+@media screen and (max-width: 1000px) {
+   #journal {
       width:  450px;
       height: 690px;
       border: 1px solid #707070;
