--- a/react-app/src/components/ViewEntry/ViewEntry.css
+++ b/react-app/src/components/ViewEntry/ViewEntry.css
@@ -59,9 +59,6 @@
    height: 100px;
 }
 
-/* #edit__entry__buttons button {
-} */
-
 .entry__button {
    margin-bottom: 5px;
    width: 157px;
@@ -69,9 +66,42 @@
    border: 1px solid #707070;
    border-radius: 15px;
    background-color: white;
-   /* margin-bottom: 30px; */
 }
 
 #edit__entry__button {
    margin-right: 20px;
+}
+
+/* Modal styling */
+
+#delete__journal__container {
+   position: static;
+   margin: 210px auto 0px auto;
+   width: 600px;
+   height: 150px;
+   background-color: white;
+   border-radius: 44px;
+   border: 1px solid #707070;
+}
+
+#delete__journal__container h1 {
+   margin: 0px;
+   margin-top: 25px;
+   height: 50px;
+   text-align: center;
+   font-size: 25px;
+}
+
+#delete__journal__buttons {
+   width: 100%;
+   display: flex;
+   justify-content: flex-end;
+}
+
+#confirm__delete {
+   margin-right:77px;
+}
+
+#cancel__delete {
+   margin-right: 5px;
 }
