--- a/react-app/src/components/EditEntry/EditEntry.css
+++ b/react-app/src/components/EditEntry/EditEntry.css
@@ -62,7 +62,14 @@
    border: 1px solid #707070;
    border-radius: 15px;
    background-color: white;
+   cursor: pointer;
 }
 #cancel__edit {
    margin-right: 20px;
+}
+
+#cancel__edit a {
+   text-decoration: none;
+   color: black;
+   padding: 17px 42px;
 }
