added padding to create entry button

--- a/react-app/src/components/ViewJournal/ViewJournal.css
+++ b/react-app/src/components/ViewJournal/ViewJournal.css
@@ -28,6 +28,10 @@
    border-radius: 25px;
 }
 
+#create__entry a{
+ padding: 12px;
+}
+
 #journal__title {
    justify-self: center;
    align-self: center;
