--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -1,3 +1,8 @@
+#splash {
+   height: 100%;
+   width: 100%;
+}
+
 #splash__intro {
    display: grid;
    grid-template-columns: 1fr 1fr;
@@ -11,7 +16,7 @@
 
 #splash__intro__text h1 {
    font-size: 47px;
-   margin: 55px 0px 33px 75px; 
+   margin: 63px 0px 33px 75px; 
 }
 
 #splash__intro__text h3{
@@ -25,13 +30,13 @@
    color: #4E4E4E;
    font-size: 21px;
    text-decoration: none;
-   transition: border-bottom .2s;
-   border-bottom: 2px solid white;
-   margin-top: 24px;
+   transition: border-bottom .3s;
+   border-bottom: 3px solid rgb(212, 212, 212);
+   margin-top: 28px;
 }
 
 #main__site__link  a:hover{
-   border-bottom: 2px solid #4E4E4E;
+   border-bottom: 3px solid #4E4E4E;
 }
 
 
@@ -71,6 +76,13 @@
    top: 53px;
 }
 
+#profile__pic {
+   height: 158px;
+   width: 158px;
+   border-radius: 50%;
+   object-fit: cover;
+}
+
 /* border styling */
 
 #splash__intro__borders div {
@@ -89,5 +101,89 @@
 /* technologies */
 
 #technologies {
-   
+   display: flex;
+   align-items: center;
+   width: 100%;
+   height: 130px;
+   background-color: #F6F6F6;
 }
+
+#technologies__title {
+   font-size: 35px;
+   color: #4E4E4E;
+   margin-left:75px;
+}
+
+.technology {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 22px;
+   width: 125px;
+   height: 46px;
+   background-color: #4E4E4E;
+   border-radius: 25px;
+   margin-left: 20px;
+   margin-top: 8px;
+}
+
+#html {
+  color: white;
+  background-color: #F16529; 
+}
+
+#css {
+   color: white;
+   background-color:#2965F1;
+}
+
+#js {
+   color: black;
+   background-color: #F7DF1E;
+}
+
+#react {
+   color: #5ED3F3;
+   background-color: #212121;
+}
+
+#python {
+   color: #F7CD43;
+   background-color: #3470A2;
+}
+
+/* profile pic */
+
+#me__container {
+   display: flex;
+}
+
+#me {
+   margin: 35px 75px;
+   height: 100%;
+}
+
+#about {
+   font-size: 35px;
+   margin-bottom: 15px;
+   color: #4E4E4E;
+}
+
+#me__description {
+   margin-top: 35px;
+   font-size: 18px;
+   width:33%;
+}
+
+#links {
+   font-size: 35px;
+   margin: 35px 75px;
+   margin-bottom: 15px;
+   color: #4E4E4E;
+}
+/* #footer {
+
+   height: 100%;
+   width: 100%;
+   background-color:#F6F6F6;
+} */
