--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -170,20 +170,18 @@
 }
 
 #me__description {
-   margin-top: 35px;
+   margin-top: 40px;
    font-size: 18px;
    width:33%;
 }
 
-#links {
+#links__title {
    font-size: 35px;
    margin: 35px 75px;
    margin-bottom: 15px;
    color: #4E4E4E;
 }
-/* #footer {
 
-   height: 100%;
-   width: 100%;
-   background-color:#F6F6F6;
-} */
+#links {
+   margin-top: 40px;
+}
