--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -98,7 +98,7 @@
    border: 2px solid rgb(95, 95, 95);
 }
 
-#signup__button {
+#signup__button__demo {
    margin-left: 5px;
    margin-right: 43px;
 }
