--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -4,26 +4,21 @@
 }
 
 #splash__intro {
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   grid-area: 
-   ""
-   ;
-   width:100%;
-   height: 316px;
+   display: flex;
+   justify-content: center;
    color: #4E4E4E;
 }
 
 #splash__intro__text h1 {
    font-size: 47px;
-   margin: 63px 0px 33px 75px; 
+   margin: 0px;
+   text-align: center;
 }
 
 #splash__intro__text h3{
-   display: flex;
-   justify-content: flex-end;
    font-size: 25px;
    margin: 0px;
+   text-align: center;
 }
 
 #main__site__link  a{
