--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -3,6 +3,8 @@
    width: 100%;
 }
 
+/* Heading */
+
 #splash__intro {
    display: flex;
    justify-content: center;
@@ -12,22 +14,28 @@
 #splash__intro__text h1 {
    font-size: 47px;
    margin: 0px;
+   margin-top: 6rem;
    text-align: center;
 }
 
-#splash__intro__text h3{
-   font-size: 25px;
+#splash__intro__text h3 {
+   font-size: 22px;
+   color: #4E4E4E;
    margin: 0px;
+   /* margin-top: .25em; */
    text-align: center;
+}
+
+#main__site__link {
 }
 
 #main__site__link  a{
+   margin-top: 500px;
    color: #4E4E4E;
-   font-size: 21px;
+   font-size: 28px;
    text-decoration: none;
    transition: border-bottom .3s;
    border-bottom: 3px solid rgb(212, 212, 212);
-   margin-top: 28px;
 }
 
 #main__site__link  a:hover{
@@ -35,9 +43,13 @@
 }
 
 
+
+
+/* OLD STYLING */
+
 /* triange positions */
 
-.polygon {
+/* .polygon {
    position: fixed;
 }
 
@@ -76,11 +88,11 @@
    width: 158px;
    border-radius: 50%;
    object-fit: cover;
-}
+} */
 
 /* border styling */
 
-#splash__intro__borders div {
+/* #splash__intro__borders div {
    width: 100%;
    height: 3px;
 }
@@ -91,11 +103,11 @@
 
 #black__border {
    background-color: rgb(0, 0, 0);
-}
+} */
 
 /* technologies */
 
-#technologies {
+/* #technologies {
    display: flex;
    align-items: center;
    width: 100%;
@@ -144,12 +156,12 @@
 
 #python {
    color: #F7CD43;
-   background-color: #3470A2;
-}
+   background-color: #3470A2; 
+}*/
 
 /* profile pic */
 
-#me__container {
+/* #me__container {
    display: flex;
    margin-top:75px
 }
@@ -192,4 +204,4 @@
 
 #links a:hover{
    border-bottom: 3px solid #4E4E4E;
-}
+} */
